--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "4.1.17",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-particles-js": "^3.5.3",
-    "normalize.css": "^8.0.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.31.1",
     "web-vitals": "^1.0.1"
