--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.31.1",
