--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.5.3",
+    "react-tsparticles": "^1.37.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
